--- a/index.html
+++ b/index.html
@@ -2,101 +2,147 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Infografía Interactiva - Castellmar</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Infografía Interactiva - Castelmare</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
+    :root{
+      --rojo:#e53935;
+      --celeste:#40C4FF;
+      --verde:#4CAF50;
     }
-
-    .infografia-container {
-      position: relative;
-      width: 100%;
-      max-width: 1000px;
-      margin: auto;
-    }
-
-    .infografia-container img {
-      width: 100%;
-      display: block;
-    }
-
-    .punto {
-      position: absolute;
-      width: 25px;
-      height: 25px;
-      background-color: red;
-      color: white;
-      border-radius: 50%;
-      text-align: center;
-      line-height: 25px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    .tooltip {
-      position: absolute;
-      background: #2ecc71;
-      color: white;
-      padding: 10px 14px;
-      border-radius: 8px;
-      font-size: 15px;
-      font-weight: bold;
-      max-width: 250px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
-      display: none;
-      z-index: 10;
-      transition: all 0.3s ease;
-      pointer-events: none;
-    }
-
-    footer {
-      text-align: center;
-      margin: 20px 0;
-      font-weight: bold;
-    }
+    body{ background:#f5f7fa; font-family: Arial, sans-serif; }
+    .hero{ background: linear-gradient(120deg, #0ea5e9 0%, #22d3ee 100%); color:#fff; padding: 25px 0; }
+    .infografia-container{ position: relative; max-width: 1000px; margin: 18px auto; border-radius: 14px; overflow: hidden; background:#000; }
+    .infografia-container img{ width: 100%; display: block; }
+    .punto{ position: absolute; width: 28px; height: 28px; background-color: var(--rojo); color: white; border-radius: 50%; text-align: center; line-height: 28px; font-weight: bold; cursor: pointer; transform: translate(-50%, -50%); }
+    .tooltip-box{ position: fixed; background: white; color: #222; padding: 12px; border-radius: 8px; font-size: 14px; font-weight: normal; max-width: 280px; box-shadow: 0 5px 15px rgba(0,0,0,0.25); display: none; z-index: 9999; pointer-events: none; }
   </style>
 </head>
 <body>
-  <div class="infografia-container">
-    <img src="img/castelmare.jpg" alt="Infografía Castellmar">
 
-    <!-- Puntos interactivos -->
-    <div class="punto" style="top: 18%; left: 60%;" data-text="Incendio forestal: Crear cortafuegos.">1</div>
-    <div class="punto" style="top: 30%; left: 45%;" data-text="Escasez de agua: Capture y guarde aguas.">2</div>
-    <div class="punto" style="top: 38%; left: 65%;" data-text="Inundaciones recurrentes: Canalizar aguas y reforestar laderas.">3</div>
-    <div class="punto" style="top: 65%; left: 35%;" data-text="Inundaciones: Permita reforestación.">4</div>
-    <div class="punto" style="top: 73%; left: 28%;" data-text="Pérdida de cultivos por inundaciones: Aumentar drenaje y elevar cultivos.">5</div>
-    <div class="punto" style="top: 26%; left: 18%;" data-text="Contaminación del río y pérdida de cultivos por inundaciones: Fomentar control de residuos y protección de márgenes.">6</div>
+  <header class="hero">
+    <div class="container">
+      <h1 class="h4">Riesgos por Cambio Climático — Castelmare</h1>
+      <p class="mb-0">Puntos de riesgo y recomendaciones para prevenir daños</p>
+    </div>
+  </header>
 
+  <main class="container pb-4">
+    <div class="infografia-container">
+      <img src="img/Castelmare.jpeg" alt="Infografía Castellmar">
 
-    <!-- Tooltip -->
-    <div class="tooltip" id="tooltip"></div>
-  </div>
+      <!-- Puntos renumerados -->
+      <div class="punto" style="top: 18%; left: 60%;" data-html="
+        <h4>1) Riesgo de incendio</h4>
+        Esta zona tiene mucho pasto seco y árboles que pueden arder en época seca.<br><br>
+        <strong>Recomendaciones:</strong>
+        <ul>
+          <li>Limpiar ramas y hojas secas.</li>
+          <li>Hacer una franja de tierra sin vegetación alrededor.</li>
+          <li>No hacer fogatas ni quemas cerca.</li>
+        </ul>">1</div>
 
-  <footer>
-    Autor: Luis Diego Chavala – 2025
-  </footer>
+      <div class="punto" style="top: 38%; left: 65%;" data-html="
+        <h4>2) Inundación por río</h4>
+        Cuando llueve mucho, el río crece y el agua puede entrar a los terrenos.<br><br>
+        <strong>Recomendaciones:</strong>
+        <ul>
+          <li>No construir tan cerca del río.</li>
+          <li>Sembrar árboles y plantas en la orilla para que el agua no erosione el suelo.</li>
+          <li>Mantener limpias las alcantarillas y cunetas.</li>
+        </ul>">2</div>
+
+        <div class="punto" style="top: 65%; left: 35%;" data-html="
+        <h4>3) Inundación a viviendas cercanas por desbordamiento del río</h4>
+        En época de lluvias fuertes, el río puede salirse de su cauce y el agua llega a las casas cercanas,<br><br>
+        <strong>Recomendaciones:</strong>
+        <ul>
+          <li>Construir barreras o muros bajos para desviar el agua.</li>
+          <li>Elevar el nivel del piso en las zonas más bajas de la vivienda.</li>
+          <li>Sembrar árboles y plantas de raíces fuertes para ayudar a frenar el paso del agua.</li>
+        </ul>">3</div>
+      
+
+      <div class="punto" style="top: 73%; left: 28%;" data-html="
+        <h4>4) Cultivos que se pierden por inundación</h4>
+        El exceso de agua daña las plantas y el suelo se erosiona.<br><br>
+        <strong>Recomendaciones:</strong>
+        <ul>
+          <li>Hacer camellones (surcos altos) para sembrar.</li>
+          <li>Sembrar cultivos que aguanten más el agua.</li>
+          <li>Colocar barreras vivas con plantas para proteger el suelo.</li>
+        </ul>">4</div>
+
+      <div class="punto" style="top: 26%; left: 18%;" data-html="
+        <h4>5) Contaminación del río</h4>
+        Basura y químicos pueden llegar al río, afectando el agua y los cultivos.<br><br>
+        <strong>Recomendaciones:</strong>
+        <ul>
+          <li>No botar basura ni químicos cerca del río.</li>
+          <li>Sembrar árboles y plantas en la orilla.</li>
+          <li>Colocar barreras naturales para que la lluvia no arrastre tierra ni contaminantes.</li>
+        </ul>">5</div>
+
+      <div id="tooltip" class="tooltip-box"></div>
+    </div>
+
+    <!-- Leyenda -->
+    <div class="card border-0 shadow-sm mt-3">
+      <div class="card-body">
+        <h5 class="card-title">Leyenda de colores</h5>
+        <ul class="list-unstyled mb-0">
+          <li><span style="display:inline-block;width:18px;height:18px;background:#40C4FF;margin-right:8px;"></span> Celeste: Río o caudal de agua</li>
+          <li><span style="display:inline-block;width:18px;height:18px;background:rgba(76,175,80,.6);margin-right:8px;"></span> Verde: Zonas de cultivo o áreas agrícolas</li>
+          <li><span style="display:inline-block;width:18px;height:18px;background:#e53935;border-radius:50%;margin-right:8px;"></span> Rojo: Puntos de riesgo</li>
+          <li><span style="display:inline-block;width:18px;height:18px;background:#fff;border:1px solid #ccc;margin-right:8px;"></span> Blanco: Caja con descripción y consejos</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="text-center mt-4">
+      <a href="https://satellites.pro/mapa_de_Quesada.Region_de_Alajuela.Costa_Rica#10.616669,-84.293069,17"
+         target="_blank"
+         class="btn btn-primary">
+        Ver mapa satelital detallado de Castelmare
+      </a>
+    </div>
+    
+  </main>
 
   <script>
-    const puntos = document.querySelectorAll('.punto');
+    const puntos  = document.querySelectorAll('.punto');
     const tooltip = document.getElementById('tooltip');
 
-    puntos.forEach(punto => {
-      punto.addEventListener('mouseenter', (e) => {
-        tooltip.textContent = punto.getAttribute('data-text');
-        tooltip.style.display = 'block';
-        const rect = punto.getBoundingClientRect();
-        tooltip.style.left = `${rect.left + window.scrollX + 30}px`;
-        tooltip.style.top = `${rect.top + window.scrollY - 10}px`;
-        tooltip.style.opacity = '1';
-      });
+    function positionTooltip(rect, tt){
+      const tooltipHeight = tt.offsetHeight || 80;
+      const tooltipWidth  = tt.offsetWidth  || 220;
+      let top  = rect.top + window.scrollY - tooltipHeight - 10;
+      let left = rect.left + window.scrollX + (rect.width/2) - (tooltipWidth/2);
+      if (top < window.scrollY) top = rect.bottom + window.scrollY + 10;
+      if (left < 10) left = 10;
+      const maxLeft = window.scrollX + window.innerWidth - tooltipWidth - 10;
+      if (left > maxLeft) left = maxLeft;
+      tt.style.top  = `${top}px`;
+      tt.style.left = `${left}px`;
+    }
 
-      punto.addEventListener('mouseleave', () => {
-        tooltip.style.display = 'none';
-      });
+    puntos.forEach(p => {
+      const show = () => {
+        tooltip.innerHTML = p.getAttribute('data-html');
+        tooltip.style.display = 'block';
+        const r = p.getBoundingClientRect();
+        positionTooltip(r, tooltip);
+      };
+      const hide = () => { tooltip.style.display = 'none'; };
+      p.addEventListener('mouseenter', show);
+      p.addEventListener('mouseleave', hide);
+      p.addEventListener('click', e => { e.stopPropagation(); show(); });
+      document.addEventListener('click', hide);
     });
+    window.addEventListener('resize', () => { tooltip.style.display = 'none'; });
   </script>
+
 </body>
 </html>
